# KittyChain

./: .gitignore  README.md  README_CN.md  pyproject.toml
demo/: __init__.py  address_api.py  okx_client.py  token_api.py  transaction_api.py
docs/: browser_tool_development_plan.md
kittychain/: __init__.py  __main__.py  cli.py  main.py
kittychain/config/: __init__.py  presets.py  settings.py  tui.py
kittychain/hooks/: __init__.py  user_permission.py
kittychain/llm/: provider.py
kittychain/prompt/: builder.py
kittychain/rule_engine/: ADAPTER_CONTRACT.md  PLAN.md  README.md  SCHEMA_TEMPLATE.md  __init__.py  diff.py  evaluator.py  generate_register_scene.py  loader.py  models.py  query.py  replay.py  validator.py
kittychain/runtime/: agent.py  logging.py  session.py
kittychain/skills/: discovery.py
kittychain/tools/: __init__.py  _internal_csv.py  _kittychain_api.py  address_balance.py  address_identity.py  address_labels.py  address_mallicious.py  address_pattern.py  address_transfers.py  agent.py  ask_user.py  base.py  bash.py  brief.py  edit.py  glob.py  grep.py  read.py  read_flow.py  read_hits.py  read_node.py  skill.py  (+17 more)
src/: __init__.py  config.py
tests/: test_config_package.py  test_config_tui.py  test_kittychain_api.py  test_okx_demo.py  test_rule_engine_evaluator.py  test_rule_engine_generate_register_scene.py  test_rule_engine_loader.py  test_rule_engine_models.py  test_rule_engine_query.py  test_rule_engine_replay.py  test_rule_engine_validator.py  test_runtime_surface.py  test_tools.py  test_user_permission.py  test_web_browser_package.py
(+41 files in other folders)
