[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittychain"
version = "0.1.0"
description = "KittyChain terminal agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "beautifulsoup4>=4.12",
    "certifi>=2024.0.0",
    "dune-client>=1.10.0",
    "goplus-sdk>=1.0.0",
    "openai>=1.0",
    "prompt_toolkit>=3.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
kittychain = "kittychain.main:main"

[tool.hatch.build.targets.wheel]
packages = ["kittychain"]
